cmake_minimum_required(VERSION 3.9)
project(LiveCodingProblems)

set(CMAKE_CXX_STANDARD 11)

add_executable(LiveCodingProblems main.cpp SinglyLinkedList.cpp SinglyLinkedList.h DoublyLinkedList.cpp DoublyLinkedList.h UserInterface.cpp UserInterface.h HighestIndex.cpp HighestIndex.h BinaryTree.cpp BinaryTree.h Tree.cpp Tree.h)